removed: class fundo-legenda

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
                                 <div data-bs-interval="2000" class="carousel-item active">
                                     <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/03/27/21/34/restaurant-1284351_640.jpg" />
                                     <div class="carousel-caption">
-                                        <h3 class="fundo-legenda">Faça pratos saborosos</h3>
+                                        <h3 >Faça pratos saborosos</h3>
                                     </div>
                                 </div>
                                 <div data-bs-interval="2000" class="carousel-item">
                                     <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/11/29/08/24/bakery-1868396_640.jpg" />
                                     <div class="carousel-caption">
-                                        <h3 class="fundo-legenda">Curso grátis de Panificação</h3>
+                                        <h3 >Curso grátis de Panificação</h3>
                                     </div>
                                 </div>
                                 <div data-bs-interval="2000" class="carousel-item">
                                     <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2019/04/02/04/32/masala-4096891_640.jpg" />
                                     <div class="carousel-caption">
-                                        <h3 class="fundo-legenda">Refeições balanceadas</h3>
+                                        <h3 >Refeições balanceadas</h3>
                                        
                                     </div>
                                 </div>
